# interliquid-sdk

./: CLAUDE.md  Cargo.toml  Gemfile  README.md  _config.yml  whitepaper.md
.github/workflows/: jekyll.yml  rust-lint.yml  rust_no_std_sp1.yml  whitepaper.yml
_layouts/: paper.html  plain.html
docs/: README.md  sequence-diagram.md
docs/api/: context.md  module.md  state-manager.md  transaction.md
examples/: Cargo.toml  README.md  basic_usage.rs
src/: lib.rs
src/block/: mod.rs  snapshot.rs  zkp_block.rs  zkp_commit_keys.rs  zkp_commit_state.rs  zkp_keys_commit.rs  zkp_state_commit.rs  zkp_tx.rs  zkp_tx_agg.rs
src/core/: app.rs  base_app.rs  context.rs  mod.rs  module.rs  msg_handler.rs  msg_registry.rs  type_registry.rs
src/merkle/: bitmap.rs  consts.rs  mod.rs
src/module/: mod.rs
src/patricia_trie/: bitmap.rs  error.rs  node.rs
src/runner/: message.rs  mod.rs  prover.rs  prover_instance.rs  prover_orchestrator.rs  runner.rs  savedata.rs  sequencer.rs  server.rs  state.rs
src/state/: cached.rs  context.rs  log.rs  manager.rs  mod.rs  range.rs  related.rs  transactional.rs
src/trie/: db.rs  key.rs  mod.rs  nibble.rs  node.rs  proof.rs
src/tx/: handler.rs  mod.rs  msg.rs  tx.rs
src/types/: address.rs  any.rs  decimal.rs  environment.rs  error.rs  mod.rs  timestamp.rs  token.rs  tokens.rs  uint.rs
src/utils/: indexed_map.rs  item.rs  key.rs  map.rs  mod.rs  range.rs  value.rs
src/x/: mod.rs
src/zkp/: mod.rs  trie.rs  zkp_block.rs  zkp_commit_keys.rs  zkp_commit_state.rs  zkp_tx.rs  zkp_tx_agg.rs
tests/: mod.rs
tests/unit/: mod.rs  range_tests.rs
whitepaper/: index.html  whitepaper.md
(+58 files in other folders)
